fix: fixed overflow issue on search box and style adjustments

--- a/Frontend/src/css/categorypage.css
+++ b/Frontend/src/css/categorypage.css
@@ -93,6 +93,7 @@
 
   .category-missed-articles {
     padding: 0rem;
+    margin-top: 2rem;
   }
 }
 
